# scwatter

./: CMakeLists.txt  CoupledWaveStructure.h  FourierWave.h  README.md  cpuEvaluator.cpp  cpuEvaluator.h  gpuEvaluator.cu  gpuEvaluator.h  sCWatter.cpp  sCWatterLayer.cpp  sCWatterPlane.cpp  sCWatterView.cpp  sCWatterplane.cpp  third_Lapack.h  tilesample.py
.cache/clangd/index/: CoupledWaveStructure.h.D9BD38538500DE1E.idx  FourierWave.h.A794D6373751A185.idx  ImGuiFileDialog.cpp.19A762152480940F.idx  ImGuiFileDialog.h.8CEA18A8C21AB4F2.idx  ImGuiFileDialogConfig.h.D835594E1007E39C.idx  cnpy.cpp.5F9E65F5F88734E0.idx  cnpy.h.7A4649AA2594858D.idx  cpuEvaluator.cpp.4DE6DF4F2117A52F.idx  cpuEvaluator.h.1993DA4EE241B9AB.idx  gpuEvaluator.cu.ED87BAA054171510.idx  gpuEvaluator.h.2882D617D1D50A2C.idx  sCWatter.cpp.28A96AE010E7F8F7.idx  sCWatterLayer.cpp.CD3B467AB9F40330.idx  sCWatterPlane.cpp.44B458148D3EE3C0.idx  sCWatterView.cpp.17F263955D13A08F.idx  third_Lapack.h.82C1AE0740120131.idx
